# chlodwig-rs

./: .gitattributes  .gitignore  DISCLAIMER.md  README.md  biome.json  changelog_2.1.88_vs_2.1.87.md  claude-split.sh  claude-unpacked.sh  diff_2.1.88_vs_2.1.87_full.md  package.json  pipeline.sh
2.1.88/: FORMATTING.md
chlodwig-rs/: ARCHITEKTUR-BERICHT.md  CLAUDE.md  CRASH_ANALYSIS_2026-04-05.md  Cargo.toml  EDIT_DIFF_FEATURE.md  GTK_PORT.md  MULTIWINDOW_TABS.md  REFACTORING.md  STAGE_0_CWD_ROADMAP.md  gtk_release.sh  markdown-quote-test.md  run_release.sh  start_chlodwig.sh  vanity-commit.sh
chlodwig-rs/.cargo/: config.toml
chlodwig-rs/crates/chlodwig-api/: Cargo.toml
chlodwig-rs/crates/chlodwig-api/src/: client.rs  lib.rs  openai.rs
chlodwig-rs/crates/chlodwig-cli/: Cargo.toml
chlodwig-rs/crates/chlodwig-cli/src/: main.rs
chlodwig-rs/crates/chlodwig-core/: Cargo.toml
chlodwig-rs/crates/chlodwig-core/src/: auto_scroll.rs  command.rs  config.rs  conversation.rs  highlight.rs  input_state.rs  lib.rs  log_paths.rs  markdown.rs  messages.rs  restore.rs  session.rs  status_line.rs  subagent.rs  system_prompt.rs  window_state.rs
chlodwig-rs/crates/chlodwig-core/src/reducers/: mod.rs  unwind.rs  user_question.rs
chlodwig-rs/crates/chlodwig-core/tests/: no_set_current_dir.rs
chlodwig-rs/crates/chlodwig-gtk/: Cargo.toml  build.rs
chlodwig-rs/crates/chlodwig-gtk/examples/: minimal.rs  mono_emoji.rs
chlodwig-rs/crates/chlodwig-gtk/macos/: AppIcon.icns  Info.plist  build_app.sh  chlodwig-finder-watchdog.sh  install_finder_extension.sh
chlodwig-rs/crates/chlodwig-gtk/src/: ansi.rs  app_state.rs  emoji.rs  emoji_overlay.rs  event_dispatch.rs  lib.rs  macos_clipboard.rs  main.rs  md_renderer.rs  menu.rs  notification.rs  render.rs  restore.rs  sessions_window.rs  setup.rs  submit.rs  tab.rs  table_interactions.rs  value_changed.rs  viewport.rs  window.rs
chlodwig-rs/crates/chlodwig-gtk/src/tab/: ai_conversation.rs  mod.rs
chlodwig-rs/crates/chlodwig-gtk/src/tests/: ansi_tests.rs  app_state_tests.rs  cjk_font_tests.rs  click_no_scroll_top_tests.rs  clipboard_ordering_tests.rs  cmd_c_output_copy_tests.rs  copy_tests.rs  cwd_command_tests.rs  edit_render_unification_tests.rs  emoji_overlay_tests.rs  emoji_tests.rs  emoji_unit_tests.rs  emoji_view_method_tests.rs  event_dispatch_tests.rs  global_ui_font_tests.rs  input_max_half_height_tests.rs  input_scroll_jump_tests.rs  line_number_tests.rs  macos_clipboard_tests.rs  md_render_unification_tests.rs  md_renderer_tests.rs  menubar_tests.rs  mod.rs  multiwindow_stage_a_tests.rs  multiwindow_stage_b_tests.rs  multiwindow_stage_c_tests.rs  notification_tests.rs  pipeline_manifest_tests.rs  quit_shortcut_tests.rs  sarasa_width_mode_tests.rs  scroll_anchor_tests.rs  scroll_simplification_tests.rs  scroll_to_bottom_button_tests.rs  session_restore_tests.rs  session_stats_tests.rs  sessions_browser_opens_new_tab_tests.rs  setup_tests.rs  startup_cwd_tests.rs  stop_turn_tests.rs  streaming_tests.rs  (+17 more)
chlodwig-rs/crates/chlodwig-tools/: Cargo.toml
chlodwig-rs/crates/chlodwig-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  listdir.rs  read.rs  user_question.rs  util.rs  webfetch.rs  websearch.rs  write.rs
chlodwig-rs/crates/chlodwig-tui/: Cargo.toml  build.rs
chlodwig-rs/crates/chlodwig-tui/examples/: key_debug.rs
chlodwig-rs/crates/chlodwig-tui/src/: app.rs  event_loop.rs  lib.rs  markdown.rs  notification.rs  permissions.rs  render.rs  rendered_line.rs  types.rs
chlodwig-rs/crates/chlodwig-tui/src/tests/: bash_cmd.rs  bracketed_paste.rs  clear.rs  constants_tab.rs  cwd_command.rs  edit_diff.rs  ghost_artifacts.rs  git_tab.rs  grep_output.rs  history.rs  input_max_half_height.rs  input_state_field.rs  input_title.rs  input_utf8.rs  mod.rs  multiline_input.rs  multiline_user_message.rs  notification.rs  read_output.rs  requests.rs  scroll.rs  session_restore_display.rs  session_save.rs  session_stats.rs  signal_handler.rs  spawn_robustness.rs  spinner.rs  startup_pwd.rs  stop_turn.rs  stream_chunks.rs  streaming_md.rs  tabs_focus.rs  timer_compaction.rs  tool_result_truncation.rs  typewriter.rs  unwind.rs  user_question.rs  vertical_cursor.rs  word_jump.rs  word_wrap.rs  (+1 more)
chlodwig-rs/docs/: EMOJI_V2_PLAN.md  gtk-main-refactoring.md  gtk-render-architecture-findings.md
chlodwig-rs/scripts/: regen_pipeline_manifest.py
chlodwig-rs/tools/git-vanity/: Cargo.toml
chlodwig-rs/tools/git-vanity/src/: bench_batch.rs  main.rs
claude-rs/: CLAUDE.md  Cargo.toml  REFACTORING.md  markdown-features.md  markdown-quote-test.md
claude-rs/crates/claude-api/: Cargo.toml
claude-rs/crates/claude-api/src/: client.rs  lib.rs
claude-rs/crates/claude-cli/: Cargo.toml
claude-rs/crates/claude-cli/src/: main.rs
claude-rs/crates/claude-core/: Cargo.toml
claude-rs/crates/claude-core/src/: lib.rs  log_paths.rs  permissions.rs  subagent.rs  tools.rs
claude-rs/crates/claude-tools/: Cargo.toml
claude-rs/crates/claude-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  listdir.rs  read.rs  webfetch.rs  websearch.rs  write.rs
claude-rs/crates/claude-tui/: Cargo.toml
claude-rs/crates/claude-tui/src/: app.rs  event_loop.rs  lib.rs  markdown.rs  permissions.rs  render.rs  types.rs
claude-rs/crates/claude-tui/src/tests/: clear.rs  crash_dump.rs  input_utf8.rs  scroll.rs  scrollbar.rs  signal_handler.rs  tabs_focus.rs  timestamps.rs  wrap_unicode.rs
docs/: repl-input-architecture.md
native-binaries/: audio-capture.node  computer-use-input.node  computer-use-swift.node  image-processor.node
native-modules/: audio-capture.js  computer-use-input.js  computer-use-swift.js  image-processor.js
scripts/: auto-label.js  call-graph.js  dep-graph.js  extract-chunks.js  gen-call-viz.js  gen-dep-viz.js  label-components.js  name-map.js  react-components.js  rename-modules.js  rename-symbols.js  zone-index.js
src/: call-graph.html  call-graph.json  dep-graph.html  dep-graph.json  name-map.json  react-components.json  run.js  run_formatted.js  run_split.js  zone-map.json
src/chunks/: $J7.js  $q7.js  (+161 more)
tests/: bundle.test.ts
(+475 files in other folders)
