[workspace]
resolver = "2"
members = [
    "crates/chlodwig-core",
    "crates/chlodwig-api",
    "crates/chlodwig-tools",
    "crates/chlodwig-tui",
    "crates/chlodwig-cli",
    "crates/chlodwig-gtk",
    "tools/git-vanity",
]
exclude = [
    "tools/sha1-asm-bug",  # standalone — uses sha1 with "asm" feature to reproduce bug
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"

[profile.release]
debug = 1          # Line tables only — keeps backtraces readable (+~2MB binary)
strip = false      # Don't strip symbols — needed for crash backtraces
lto = true
codegen-units = 1
opt-level = "z"

# Maximum speed for git-vanity (SHA-1 brute-force needs inlining + vectorization)
[profile.release.package.git-vanity]
opt-level = 3

[profile.release.package.sha1]
opt-level = 3
