[package]
name = "chlodwig-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chlodwig-core = { path = "../chlodwig-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.13", features = ["stream", "json"] }
async-stream = "0.3"
bytes = "1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
