[package]
name = "chlodwig-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = "0.4"
dirs = "6"
pulldown-cmark = "0.13"
unicode-width = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
pretty_assertions = "1"
tempfile = "3"
