[package]
name = "chlodwig-gtk"
version = "0.1.0"
edition = "2021"

[features]
default = ["gtk-ui"]
gtk-ui = ["dep:gtk4", "dep:libadwaita", "dep:async-trait", "tokio/full"]

[[bin]]
name = "chlodwig-gtk"
path = "src/main.rs"
required-features = ["gtk-ui"]

[dependencies]
chlodwig-core = { path = "../chlodwig-core" }
chlodwig-api = { path = "../chlodwig-api" }
chlodwig-tools = { path = "../chlodwig-tools" }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4"
dirs = "6"

# GTK dependencies — only needed for the binary, not for lib unit tests.
gtk4 = { version = "0.9", optional = true, features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"], optional = true }
tokio = { workspace = true }
async-trait = { workspace = true, optional = true }

# macOS native notifications via UNUserNotificationCenter.
# These are non-optional on macOS — always compiled when building for macOS.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-user-notifications = "0.3.2"
objc2-foundation = "0.3.2"
objc2 = "0.6.4"
block2 = "0.6.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
