[package]
name = "claude-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
claude-core = { path = "../claude-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.13", features = ["rustls", "query"] }
html2text = "0.16"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
